CPG-DEV/src/objects/Opportunity_Competitor_Product__c.object
<CustomObject>
    <fields>
        <fullName>Competitor2__c</fullName>
        <formula>Competitor_Product__r.Competitor__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Competitor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitor_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Competitor Product</label>
        <referenceTo>Competitor_Product__c</referenceTo>
        <relationshipLabel>Opportunity Competitor Products</relationshipLabel>
        <relationshipName>Opportunity_Competitor_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Competitor Products</relationshipLabel>
        <relationshipName>Competitor_Product_ID</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Competitor Products</relationshipLabel>
        <relationshipName>Opportunity_Competitor_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Price_Spread_Source__c</fullName>
        <label>Price Spread Source</label>
        <picklist>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Estimate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vendor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail/consumer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Price_Spread__c</fullName>
        <label>Price Spread</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <formula>TEXT(Competitor_Product__r.Product_Line__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Line</label>
        <type>Text</type>
    </fields>
    <label>Opportunity Competitor Product</label>
    <nameField>
        <displayFormat>OCP-{0000000}</displayFormat>
        <label>Competitor Product ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Competitor Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>